--- a/index.html
+++ b/index.html
@@ -47,19 +47,31 @@
 
             <div class="line">
                 <p class="name">Coupe - Brushing</p>
-                <p class="price">41 € / 44 € / 49 €</p>
+                <p class="price">42 € / 45 € / 50 € / 55 €</p>
+            </div>
+            <div class="little-bar"></div>
+
+            <div class="line">
+                <p class="name">Coupe transformation ou Long</p>
+                <p class="price">25 € / 35 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Shampooing - Brushing</p>
-                <p class="price">22 € / 24 € / 29 € / 34 €</p>
+                <p class="price">23 € / 25 € / 30 € / 35 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Soin</p>
                 <p class="price">6 € / 10 €</p>
+            </div>
+            <div class="little-bar"></div>
+
+            <div class="line">
+                <p class="name">Ampoule</p>
+                <p class="price">6 €</p>
             </div>
             <div class="little-bar"></div>
 
@@ -71,25 +83,25 @@
 
             <div class="line">
                 <p class="name">Couleur</p>
-                <p class="price">38 €</p>
+                <p class="price">39 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Couleur sans ammoniaque</p>
-                <p class="price">43 €</p>
+                <p class="price">44 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Shampooing - Américain</p>
-                <p class="price">38 €</p>
+                <p class="price">39 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Couleur Semi - Permanente</p>
-                <p class="price">33 €</p>
+                <p class="price">34 €</p>
             </div>
             <div class="little-bar"></div>
 
@@ -97,52 +109,55 @@
                 <p class="name">Dose supplémenaire</p>
                 <p class="price">10 €</p>
             </div>
-
-            <br>
+            <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Flash</p>
-                <p class="price">19 € / 29 €</p>
-            </div>
-
-            <br>
-
-            <div class="line">
-                <p class="name">Décoloration Cheveux court</p>
-                <p class="price">58 €</p>
+                <p class="price">20 € / 30 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Décapage</p>
-                <p class="price">33 €</p>
+                <p class="price">35 €</p>
+            </div>
+            <div class="little-bar"></div>
+
+            <div class="line">
+                <p class="name">Décoloration Cheveux court</p>
+                <p class="price">60 €</p>
+            </div>
+            <div class="little-bar"></div>
+
+            <div class="line">
+                <p class="name">Défrisage</p>
+                <p class="price">49 € / 59 € / 69 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Balayage</p>
-                <p class="price">48 € / 62 € / 72 €</p>
+                <p class="price">50 € / 64 € / 74 € / 84 € / 104 €</p>
             </div>
-
-            <br>
+            <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Forfait - Permanente</p>
-                <p class="price">78 € / 89 €</p>
+                <p class="price">80 € / 90 €</p>
             </div>
             <p id="haircut-info">(Shampooing, Coupe, Permanente, avec ou sans ammoniaque, Brush)</p>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Coupe Adolescente -18 ans</p>
-                <p class="price">38 €</p>
+                <p class="price">39 €</p>
             </div>
             <p id="haircut-info">(Cheveux courts)</p>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Coupe Enfant -10 ans</p>
-                <p class="price">19 €</p>
+                <p class="price">20 €</p>
             </div>
             <p id="haircut-info">(Cheveux longs sur devis)</p>
         </div>
@@ -151,25 +166,25 @@
 
             <div class="line">
                 <p class="name">Shampooing Brushing</p>
-                <p class="price">19 €</p>
+                <p class="price">20 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Coupe</p>
-                <p class="price">26 €</p>
+                <p class="price">27 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Coupe Adolescent -18 ans</p>
-                <p class="price">24 €</p>
+                <p class="price">25 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Coupe Enfant -10 ans</p>
-                <p class="price">19 €</p>
+                <p class="price">20 €</p>
             </div>
             <div class="little-bar"></div>
 
@@ -181,7 +196,7 @@
 
             <div class="line">
                 <p class="name">Couleur</p>
-                <p class="price">33 € / 38 €</p>
+                <p class="price">34 € / 39 €</p>
             </div>
             <div class="little-bar"></div>
 
@@ -193,13 +208,13 @@
 
             <div class="line">
                 <p class="name">Balayage</p>
-                <p class="price">35 € / 45 € / 55 €</p>
+                <p class="price">36 € / 46 € / 56 €</p>
             </div>
             <div class="little-bar"></div>
 
             <div class="line">
                 <p class="name">Forfait Permanente</p>
-                <p class="price">66 €</p>
+                <p class="price">67 €</p>
             </div>
             <p id="haircut-info">(Shampooing, Coupe, Permanente, Coiffage)</p>
         </div>
